--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "author": "Maxix",
   "dependencies": {
+    "captcha-canvas": "^3.2.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4"
   }
 }
-
