--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "captcha-canvas": "^3.2.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "uniqid": "^5.4.0"
   }
 }
