--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Maxix",
   "dependencies": {
+    "axios": "^1.6.2",
     "captcha-canvas": "^3.2.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
