--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.6.2",
     "captcha-canvas": "^3.2.1",
+    "discord-giveaways": "^6.0.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
     "mongoose": "^8.0.1",
+    "ms": "^2.1.3",
     "uniqid": "^5.4.0"
   }
 }
