--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,9 @@
 {
     "CommandsListOnStartup": true,
-    "Color": "#D78B84"
+    "Color": "#D78B84",
+    "StaffRole": "Staff",
+    "UnverifiedRole": "Unverified",
+    "RulesChannel": "rules-and-info",
+    "WelcomeChannel": "welcome-feed",
+    "CustomStatus": "Hacking DA"
 }
