--- a/src/config.json
+++ b/src/config.json
@@ -5,5 +5,6 @@
     "UnverifiedRole": "Unverified",
     "RulesChannel": "rules-and-info",
     "WelcomeChannel": "welcome-feed",
+    "transcriptChannel": "transcrips",
     "CustomStatus": "Hacking DA"
 }
