--- a/src/config.json
+++ b/src/config.json
@@ -6,6 +6,6 @@
     "UnverifiedRole": "Unverified",
     "RulesChannel": "rules-and-info",
     "WelcomeChannel": "welcome-feed",
-    "transcriptChannel": "transcrips",
+    "transcriptChannel": "transcripts",
     "CustomStatus": "Hacking DA"
 }
