--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
     "CommandsListOnStartup": false,
     "Color": "#D78B84",
-    "StaffRole": "Staff",
-    "Walnutrole": "Walnut",
-    "UnverifiedRole": "Unverified",
+    "StaffRole": "990527994990854175",
+    "Walnutrole": "1075813917688869027",
+    "UnverifiedRole": "1014411262916046869",
     "RulesChannel": "rules-and-info",
     "WelcomeChannel": "welcome-feed",
     "transcriptChannel": "transcripts",
