--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
     "CommandsListOnStartup": false,
     "Color": "#D78B84",
     "StaffRole": "990527994990854175",
-    "Walnutrole": "Walnut",
+    "Walnutrole": "1075813917688869027",
     "UnverifiedRole": "1014411262916046869",
     "RulesChannel": "rules-and-info",
     "WelcomeChannel": "welcome-feed",
