--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,11 @@
 {
     "CommandsListOnStartup": false,
     "Color": "#D78B84",
-    "StaffRole": "990527994990854175",
+    "StaffRole": "1178341975964012645",
     "Walnutrole": "1075813917688869027",
     "UnverifiedRole": "1014411262916046869",
     "RulesChannel": "rules-and-info",
     "WelcomeChannel": "welcome-feed",
-    "transcriptChannel": "transcripts-logs",
+    "transcriptChannel": "1041771433145159721",
     "CustomStatus": "Hacking DA"
 }
