--- a/config.json
+++ b/config.json
@@ -1,11 +1,7 @@
 {
     "commandsListOnStartup": false,
     "color": "#D78B84",
-    "walnutId": "1075813917688869027",
+    "customStatus": "Hacking DA",
     "staffRole": "1178341975964012645",
-    "unverifiedRole": "1014411262916046869",
-    "rulesChannel": "990527996043603971",
-    "welcomeChannel": "1041596728996003912",
-    "transcriptChannel": "1041771433145159721",
-    "customStatus": "Hacking DA"
+    "unverifiedRole": "1014411262916046869"
 }
