--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "commandsListOnStartup": false,
     "color": "#D78B84",
-    "customStatus": "Hacking DA",
-    "unverifiedRole": "1014411262916046869"
+    "customStatus": "Hacking DA"
 }
