--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walnut",
-  "version": "0.42",
+  "version": "0.43",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "author": "Maxix",
   "dependencies": {
+    "axios": "^1.6.2",
     "captcha-canvas": "^3.2.1",
     "discord-giveaways": "^6.0.1",
     "discord-html-transcripts": "^3.2.0",
