--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walnut",
-  "version": "0.52",
+  "version": "0.53",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "uniqid": "^5.4.0"
   }
