--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walnut",
-  "version": "0.55",
+  "version": "0.56",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "openai": "^4.24.1",
     "uniqid": "^5.4.0"
   }
 }
