--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "captcha-canvas": "^3.2.1",
+    "cors": "^2.8.5",
     "discord-giveaways": "^6.0.1",
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.11.0",
