--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.1.4",
+    "express": "^4.19.2",
     "mongoose": "^8.0.1",
     "openai": "^4.24.1",
     "uniqid": "^5.4.0"
